润色colab简介，修改首页direction排版，文字两侧对齐，更换direction的图，visit project page改成Visit UV home page，固定首页的右上角的几个按钮，小标题都放在左边，美化按钮的ui

--- a/config.yaml
+++ b/config.yaml
@@ -102,7 +102,7 @@ params:
     intro: "Welcome to"
     title: "Colab"
     subtitle: "Robotics & Space Systems Laboratory"
-    content: "CoLab(Cola Laboratory,可乐实验室) was founded on June 12, 2016. With strong expertise in human-centric image and video understanding—including human segmentation, pose estimation, attribute prediction, and re-identification—we now focus on integrating AI with advanced platforms such as drones, embodied agents, and satellite remote sensing."
+    content: "CoLab (Cola Laboratory,可乐实验室) was founded on June 12, 2016. We have deep expertise in human-centric image and video understanding, with core capabilities covering human segmentation, pose estimation, attribute prediction and re-identification. At present, we are focusing on the integration of artificial intelligence technology with cutting-edge platforms such as drones, embodied agents and satellite remote sensing."
     #image: /images/background/back1.png
     bottomImage:
       enable: false
@@ -124,7 +124,7 @@ params:
     enable: false
     title: "Intro"
     image: ""
-    content: "CoLab(Cola Laboratory,可乐实验室) was founded on June 12, 2016. With strong expertise in human-centric image and video understanding—including human segmentation, pose estimation, attribute prediction, and re-identification—we now focus on integrating AI with advanced platforms such as drones, embodied agents, and satellite remote sensing."
+    content: "CoLab (Cola Laboratory,可乐实验室) was founded on June 12, 2016. We have deep expertise in human-centric image and video understanding, with core capabilities covering human segmentation, pose estimation, attribute prediction and re-identification. At present, we are focusing on the integration of artificial intelligence technology with cutting-edge platforms such as drones, embodied agents and satellite remote sensing."
 
   
   # 首页展示"代表作"卡片
