feat: Publications页增添分类选项，但还存在一点bug

--- a/config.yaml
+++ b/config.yaml
@@ -64,6 +64,7 @@ params:
   title: "Colab"
   description: "Colab Lab — UAV • Manipulation • Spacecraft"
   favicon: "/images/cologo.png"
+  staticPath: ""
 
   useBootstrapCDN: false
   mathjax: false
